# learning-to-rank

./: .flake8  .gitignore  README.md  environment.yaml  pre-commit-config.yaml  pyproject.toml
.github/workflows/: ci.yml
config/: inference.yaml  train.yaml
config/data/: dataset.yaml
config/models/: catboost.yaml  lightgbm.yaml
config/tools/: features.yaml
notebook/: eda.ipynb  eda.py
scripts/: run.sh
src/: inference.py  train.py
src/data/: __init__.py  create.py  dataset.py
src/evaluation/: metric.py
src/features/: build.py
src/generator/: __init__.py
src/models/: __init__.py  base.py  boosting.py
src/tools/: __init__.py  create.py  features.py  metric.py  utility.py
tests/data/: test_dataset.py
