[tool.poetry]
name = "learning-to-rank"
version = "0.1.0"
description = ""
authors = ["ds-wook <leewook94@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11"
scikit-learn = "1.5.2"
pandas = "2.2.3"
hydra-core = ">=1.3.2"
lightgbm = ">=4.5.0"
xgboost = ">=2.1.2"
ipykernel = ">=6.29.5"
black = ">=24.10.0"
flake8 = ">=7.1.1"
isort = ">=5.13.2"
prettytable = ">=3.12.0"
seaborn = ">=0.13.2"
matplotlib = "3.9.2"
implicit = "0.7.2"
flake8-pyproject = ">=1.2.3"
catboost = "^1.2.7"
pytest = "^8.3.5"

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.4"
pre-commit = "^4.0.1"
mypy = "^1.14.0"

[tool.ruff]
line-length = 88
exclude = [
    ".git",
    "__pycache__",
    "tests/*",
    "*/__init__.py",
]
lint.ignore = ["F401", "E402", "E501"]
lint.select = ["I", "E", "F", "W", "C90", "UP"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
